# name_compare

./: README.md  divide_to_words.py  extended_difflib.py  modificated_difflib.py  names_matcher.py  plural_singular.csv  plurals.csv  pyproject.toml  setup.cfg  vars_match.py  vars_matcher.py
src/: difflib.py  extended_difflib.py  vars_matcher.py
src/vars_matcher/: extended_difflib.py  vars_matcher.py
