[metadata]
name = vars_matcher
version = 0.0.1
author = Moshe Munk
author_email = moshe.munk@mail.huji.ac.il
description = Ratio calculator between names - especially of elements (variables, classes and methods) in a program code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AutoPurchase/vars_matcher
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.csv
